# onion-engine

./: Cargo.toml
demo/: Cargo.toml
demo/src/: gameapp.rs  main.rs
demo/src/common/: controls.rs
demo/src/screens/: demo_screen.rs  empty_screen.rs  mod.rs
src/: camera.rs  instance.rs  lib.rs  render.rs
src/ecs/: components.rs  mod.rs  world.rs
src/ecs/systems/: mod.rs  movement_system.rs
src/game_interface/: app.rs  mod.rs  screen.rs
src/graphics/: mod.rs  texture.rs
src/graphics/gl/: mod.rs
src/graphics/objects/: mod.rs
src/graphics/objects/shapes/: shape.rs
src/utils/: math.rs
