[package]
name = "onion_engine"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["demo"]

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.11.1"
log = "0.4.20"
winit = "0.29.10"
wgpu = "0.19.1"
bytemuck = { version = "1.14.3", features = ["derive"] }
image = "0.24.8"
anyhow = "1.0.80"
ultraviolet = "0.9.2"
